--- a/avenger page/avenger.css
+++ b/avenger page/avenger.css
@@ -34,6 +34,7 @@ html,body{
     background-color: black;
     color:purple;
     transition: 0.8s;
+    background-color: linear-gradient(rgba);
 }
 .container{
     background-image: url(avenger/Endgame.jpg);
